Fix table's incorrect width on Firefox.
Also, fix scrollbar appearing at the bottom when in desktop mode.

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -21,7 +21,7 @@ a {
   border: none;
   box-shadow: 0px 1px 5px 0px gray;
   overflow-x: auto;
-
+  width: 100%;
   .panel-footer {
     border-top: none;
     background-color: white;
